--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <div class="container" id="top">
     <header class="reveal">
       <h1>Muhammad R Omer</h1>
-      <p>Biophysics × Data Science — analytics, modeling & decision intelligence</p>
+      <p>Biophysics & Data Science @ ASU </p>
       <div class="social-links" aria-label="Social links">
         <a class="chip" href="https://github.com/rafeyomer" target="_blank" rel="noopener"><i class="fab fa-github"></i><span>GitHub</span></a>
         <a class="chip" href="https://www.linkedin.com/in/momer4" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i><span>LinkedIn</span></a>
@@ -297,7 +297,6 @@
       <div class="cta" role="group" aria-label="Contact options">
         <a class="btn icon" href="mailto:rafey.omer@hotmail.com" title="Email"><i class="fas fa-envelope"></i></a>
         <a class="btn icon" href="tel:8729857888" title="Call"><i class="fas fa-phone"></i></a>
-        <a class="btn icon" id="themeToggle" title="Toggle light/dark"><i class="fas fa-moon"></i></a>
       </div>
     </header>
 
@@ -397,19 +396,6 @@
               <li>Problem Solving</li>
               <li>Communication & Stakeholder Alignment</li>
               <li>Team Collaboration</li>
-            </ul>
-          </article>
-        </div>
-      </section>
-
-      <section id="impact" class="reveal">
-        <h2>Highlights</h2>
-        <div class="group">
-          <article class="card">
-            <ul>
-              <li>Dean’s List (ASU, Spring 2025); President’s List (Harper, Fall 2024).</li>
-              <li>Completed hands-on lean manufacturing internship focused on analytics, time studies, and process documentation.</li>
-              <li>Delivered statistical models and visual dashboards for decision support in coursework and projects.</li>
             </ul>
           </article>
         </div>
